<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_04"
    tools:context=".Controler.NegatifResultatActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre_resultat"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="73dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/call"
        android:onClick="call1"
        android:src="@drawable/ic_call"
        app:backgroundTint="#C42414"
        tools:ignore="OnClick">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10sp"
        android:text="urgence"
        android:gravity="top"
        android:drawableLeft="@drawable/ic_baseline_warning_24"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/resultat_negatif"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="30dp"/>
    <Button
        android:id="@+id/bt_accueil_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ACCUEIL"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="@android:dimen/app_icon_size"/>
</LinearLayout>